--- a/bower.json
+++ b/bower.json
@@ -4,7 +4,8 @@
   "dependencies": {
     "bootstrap": "~3.3.5",
     "modernizr": "~2.8.3",
-    "jssor-slider": "jssor#^21.1.5"
+    "jssor-slider": "jssor#^21.1.5",
+    "font-awesome": "fontawesome#^4.6.3"
   },
   "overrides": {
     "bootstrap": {
